Fix bottom to have spacing

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -3,6 +3,7 @@
   display: grid;
   grid-template-columns: 30% 58%;
   gap: 12%;
+  margin-bottom: 7rem;
 }
 
 .contact__options {
